[package]
name = "hostm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", default-features = false, features = ["derive", "std", "help"] }
regex = { version = "1.10", default-features = false, features = ["std", "unicode-perl"] }
anyhow = { version = "1.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
